apps/otp/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otp-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: dev-internal
    alb.ingress.kubernetes.io/load-balancer-name: dev-eks-internal-alb
    external-dns.alpha.kubernetes.io/hostname: otp.dev-eks.internal-services
    external-dns.alpha.kubernetes.io/ttl: "300"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:495947449196:certificate/5152bcf9-4464-4bb3-8953-014a10d654c5
spec:
  rules:
  - host: otp.dev-eks.internal-services
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: otp-service
            port:
              number: 5000
